2008-08-06  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.c
	  src/gconf-helpers/gconf-helpers.h
		- Generalize IP4 helper functions to handle both routes and addresses

	* src/gconf-helpers/gconf-upgrade.c
	  src/gconf-helpers/gconf-upgrade.h
		- (nm_gconf_migrate_0_7_ignore_dhcp_dns, nm_gconf_migrate_0_7_vpn_routes):
			new functions

2008-08-05  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/Makefile.am
	  src/connection-editor/ip4-routes-dialog.c
	  src/connection-editor/ip4-routes-dialog.h
	  src/connection-editor/ce-page-ip4.glade
		- Add a mostly-functional routes editor dialog

	* src/connection-editor/page-ip4.c
		- Hook the routes button up to the routes dialog

2008-08-04  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/page-ip4.c
	  src/connection-editor/ce-page-ip4.glade
		- De-sensitize all widgets that don't make sense for a given IP4 method
		- Add a 'routes' button
		- Make the examples tooltips rather than widgets

2008-08-01  Dan Williams  <dcbw@redhat.com>

	* src/utils/utils.c
		- (fixup_desc_string): remove more bits of vendor and product strings

2008-08-01  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (nma_menu_add_devices): count unavailable and unmanaged wireless
			devices when building the menu, but not when determining whether
			to show other wireless related menu items

2008-08-01  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-upgrade.c
	  src/gconf-helpers/gconf-upgrade.h
		- (nm_gconf_migrate_0_7_ip4_method): Update ipv4 method names to match
			NM svn r3882 and later

	* gconf-helpers/gconf-helpers.c
		- (nm_gconf_get_all_connections): convert method names

	* src/connection-editor/page-ip4.c
		- (populate_ui, ui_to_setting): use new method names

2008-07-31  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/page-ip4.c
		- (method_changed): tighten up UI options; disable widgets where the
			option doesn't make sense for the IP4 method chosen
