@@ -358,6 +358,19 @@ Shared to other computers</property>
             <property name="position">1</property>
           </packing>
         </child>
+        <child>
+          <widget class="GtkCheckButton" id="ip4_ignore_auto_routes">
+            <property name="visible">True</property>
+            <property name="can_focus">True</property>
+            <property name="label" translatable="yes">Ignore automatically obtained routes</property>
+            <property name="response_id">0</property>
+            <property name="draw_indicator">True</property>
+          </widget>
+          <packing>
+            <property name="expand">False</property>
+            <property name="position">2</property>
+          </packing>
+        </child>
         <child internal-child="action_area">
           <widget class="GtkHButtonBox" id="dialog-action_area1">
             <property name="visible">True</property>
