@@ -28,7 +28,9 @@
 
 #include "nm-setting-ip4-config.h"
 
-GtkWidget *ip4_routes_dialog_new (GSList *routes);
+GtkWidget *ip4_routes_dialog_new (GSList *routes,
+                                  gboolean automatic,
+                                  gboolean ignore_auto_routes);
 
 void ip4_routes_dialog_update_setting (GtkWidget *dialog, NMSettingIP4Config *s_ip4);
 
