@@ -1,5 +1,15 @@
 2008-08-06  Dan Williams  <dcbw@redhat.com>
 
+	* src/connection-editor/ce-page-ip4.glade
+		- Add a checkbox for 'ignore-auto-routes'
+
+	* src/connection-editor/ip4-routes-dialog.c
+	  src/connection-editor/ip4-routes-dialog.h
+	  src/connection-editor/page-ip4.c
+		- Handle route editing
+
+2008-08-06  Dan Williams  <dcbw@redhat.com>
+
 	* src/gconf-helpers/gconf-helpers.c
 	  src/gconf-helpers/gconf-helpers.h
 		- Generalize IP4 helper functions to handle both routes and addresses
